auth phase 4 5 done finished
